2007-03-28  Claes Nästén  <me{@}pekdon{.}net>

	* src/WindowManager.cc (WindowManager::RootWO::RootWO):
	Added setting of _NET_WM_PID and WM_CLIENT_MACHINE to the root window.

2007-03-10  Claes Nästén  <me{@}pekdon{.}net>

	* src/CfgParser.cc (CfgParser::variable_expand): 
	Fix missing expansion if environment variables.

2007-01-31  Claes Nästén  <me{@}pekdon{.}net>

	* src/PDecor.cc (Button::setState): 
	First commit in 2007, added shaping to buttons for stretched
	backgrounds.

2006-12-26  Claes Nästén  <me{@}pekdon{.}net>

	* src/PDecor.cc (PDecor::renderTitle):
	Add fix for #99 cause by broken optimisation introduced in
	revision 119. Closing #99.
	( Thanks okraits for reporting )

2006-11-10  Claes Nästén  <me{@}pekdon{.}net>

	* src/DockApp.cc (DockApp::validateSize): 
	Do not validate on the clients size, but validate on the padded
	total size to get dockapps properly centered.

2006-09-27  Claes Nästén  <me{@}pekdon{.}net>

	* src/PWinObj.hh (class PWinObj): 
	Added a map of Window to PWinObj for faster lookup.

	* src/Workspaces.cc (Workspaces::updateClientStackingList): 
	Updated to not create the list twice (one list and one array).

	* src/Client.cc (Client::readEwmhHints): 
	Added skipping of menus and focus toggling for docks.

2006-09-21  Claes Nästén  <me{@}pekdon{.}net>

	* src/PixmapHandler.cc (PixmapHandler::returnPixmap): 
	Use map for pixmap handler instead of list.

2006-09-11  Claes Nästén  <me{@}pekdon{.}net>

	* src/ActionHandler.cc (ActionHandler::findClientFromTitle): 
	Updated FindClient action to match against the visible title and not
	the Client set one.

	* src/RegexString.cc (RegexString::parse_match): 
	Updated parse match to support parsing of // style regular expressions
	having flags set. Currently only i flag supported. This type of
	expressions is currently only possible on the FindClient action.
	
	
2006-09-07  Claes Nästén  <me{@}pekdon{.}net>

	* src/Config.cc (Config::parseAction): 